Add better drawapi selection to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,12 +29,32 @@ set(Game "tf2" CACHE STRING "Target game")
 set(GameValues "tf2;hl2dm;dab;tf2c;css;dynamic" CACHE INTERNAL "List of supported game types")
 set_property(CACHE Game PROPERTY STRINGS ${GameValues})
 
+set(DrawType "IMGUI" CACHE STRING "Target drawing api")
+set(DrawTypes "No Visuals;Glez;Engine;IMGUI;IMGUI Streamproof" CACHE INTERNAL "Select the drawing api that cathook should use")
+set_property(CACHE DrawType PROPERTY STRINGS ${DrawTypes})
+
+set(EnableVisuals 0)
+set(EnableGlezDrawing 0)
+set(EnableEngineDrawing 0)
+set(EnableImGuiDrawing 0)
+set(ExternalDrawing 0)
+
+if(NOT DrawType STREQUAL "No Visuals")
+    set(EnableVisuals 1)
+endif()
+if(DrawType STREQUAL "Glez")
+    set(EnableGlezDrawing 1)
+elseif(DrawType STREQUAL "Engine")
+    set(EnableEngineDrawing 1)
+elseif(DrawType STREQUAL "IMGUI")
+    set(EnableImGuiDrawing 1)
+elseif(DrawType STREQUAL "IMGUI Streamproof")
+    set(EnableImGuiDrawing 1)
+    set(ExternalDrawing 1)
+endif()
+
 set(EnableUnityBuilds 1 CACHE BOOL "Enable Profiler")
 set(EnableProfiler 0 CACHE BOOL "Enable Profiler")
-set(EnableVisuals 1 CACHE BOOL "Enable Visuals")
-set(ExternalDrawing 0 CACHE BOOL "External Visuals")
-set(EnableEngineDrawing 0 CACHE BOOL "Draw using engine and disable libglez whenever possible")
-set(EnableImGuiDrawing 1 CACHE BOOL "Draw using ImGui's drawlists")
 set(EnableGUI 1 CACHE BOOL "Enable GUI")
 set(EnableIPC 1 CACHE BOOL "Enable IPC")
 set(DataPath "/opt/cathook/data" CACHE FILEPATH "Data location")
@@ -52,12 +72,7 @@ if(NOT EnableVisuals)
 endif()
 
 if (EnableVisuals)
-# Bruh moment
-    if (ExternalDrawing AND EnableEngineDrawing)
-        set(ExternalDrawing 0)
-    endif()
     if (EnableImGuiDrawing)
-        set(EnableEngineDrawing 0)
         find_package(Freetype REQUIRED)
         target_include_directories(cathook PRIVATE "${FREETYPE_INCLUDE_DIRS}")
         target_link_libraries(cathook ${FREETYPE_LIBRARIES})
@@ -97,7 +112,7 @@ if(EnableOnlineFeatures)
 endif()
 
 if(EnableVisuals)
-    if (NOT EnableEngineDrawing AND NOT EnableImGuiDrawing)
+    if (EnableGlezDrawing)
         add_subdirectory(external/libglez)
     endif()
     target_include_directories(cathook PRIVATE include/visual)
@@ -109,7 +124,7 @@ if(EnableVisuals)
         target_include_directories(cathook PRIVATE external/libxoverlay/include)
     endif()
     target_include_directories(cathook PRIVATE "${SDL2_INCLUDE_DIRS}")
-    if (NOT EnableEngineDrawing AND NOT EnableImGuiDrawing)
+    if (EnableGlezDrawing)
         target_link_libraries(cathook glez)
     endif()
     target_link_libraries(cathook ${ValveLibrarySDL2} ${GLEW_LIBRARIES})
