improve stream safety

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,9 +29,10 @@ set(Game "tf2" CACHE STRING "Target game")
 set(GameValues "tf2;hl2dm;dab;tf2c;css;dynamic" CACHE INTERNAL "List of supported game types")
 set_property(CACHE Game PROPERTY STRINGS ${GameValues})
 
-set(DrawType "IMGUI" CACHE STRING "Target drawing api")
+set(Visuals_DrawType "IMGUI" CACHE STRING "Target drawing api")
 set(DrawTypes "No Visuals;Glez;Engine;IMGUI;IMGUI Streamproof" CACHE INTERNAL "Select the drawing api that cathook should use")
-set_property(CACHE DrawType PROPERTY STRINGS ${DrawTypes})
+set_property(CACHE Visuals_DrawType PROPERTY STRINGS ${DrawTypes})
+set(Visuals_EnforceStreamSafety 1 CACHE BOOL "If a streamsafe drawing method is used, this will remove features that are not streamsafe.")
 
 set(EnableVisuals 0)
 set(EnableGlezDrawing 0)
@@ -39,19 +40,25 @@ set(EnableEngineDrawing 0)
 set(EnableImGuiDrawing 0)
 set(ExternalDrawing 0)
 
-if(NOT DrawType STREQUAL "No Visuals")
+if(NOT Visuals_DrawType STREQUAL "No Visuals")
     set(EnableVisuals 1)
 endif()
-if(DrawType STREQUAL "Glez")
+if(Visuals_DrawType STREQUAL "Glez")
     set(EnableGlezDrawing 1)
-elseif(DrawType STREQUAL "Engine")
+elseif(Visuals_DrawType STREQUAL "Engine")
     set(EnableEngineDrawing 1)
-elseif(DrawType STREQUAL "IMGUI")
+elseif(Visuals_DrawType STREQUAL "IMGUI")
     set(EnableImGuiDrawing 1)
-elseif(DrawType STREQUAL "IMGUI Streamproof")
+elseif(Visuals_DrawType STREQUAL "IMGUI Streamproof")
     set(EnableImGuiDrawing 1)
     set(ExternalDrawing 1)
 endif()
+if (NOT ExternalDrawing)
+    set(Visuals_ForceStreamSafety 0)
+endif()
+
+message(${Visuals_ForceStreamSafety})
+
 
 set(EnableUnityBuilds 1 CACHE BOOL "Enable Profiler")
 set(EnableProfiler 0 CACHE BOOL "Enable Profiler")
