--- a/config
+++ b/config
@@ -13,6 +13,13 @@ if [ ! -x "$(command -v dialog)" ]; then
     exit 1
 fi
 
+exists=true
+cfg_haskey $configfile version || exists=false
+if [ "$exists" == false ]; then
+    echo Updating before changing config...
+    ./update
+fi
+
 response=$(dialog --keep-tite --title "Config" --menu "Select a config submenu:" 0 0 0 1 "Update channel" --output-fd 1)
 
 if [ "$response" == 1 ]; then
