Ignore Key presses while writing in (party/team)chat

--- a/src/hooks/visual/CMakeLists.txt
+++ b/src/hooks/visual/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(files "${CMAKE_CURRENT_LIST_DIR}/BeginFrame.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/CHudChat.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/DrawModelExecute.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/FrameStageNotify.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/OverrideView.cpp"
