Fix incorrect usage of ENABLE_VISUALS (#807)
* Update CMakeLists.txt

* Update CMakeLists.txt

* Update nographics.cpp

* Revert "Revert "Fix the visuals stuff being used wron""

This reverts commit d748cffcdfefea0ea7e60bb16a5d778bc9c99066.

--- a/src/hooks/CMakeLists.txt
+++ b/src/hooks/CMakeLists.txt
@@ -23,6 +23,6 @@ set(ignore_files ${ignore_files} CACHE INTERNAL "")
 
 if(EnableVisuals)
     add_subdirectory(visual)
-else()
+elseif(Textmode)
     add_subdirectory(textmode)
 endif()
