--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,20 +39,23 @@ set(GameValues "tf2;hl2dm;dab;tf2c;css;dynamic" CACHE INTERNAL "List of supporte
 set_property(CACHE Game PROPERTY STRINGS ${GameValues})
 
 set(Visuals_DrawType "IMGUI" CACHE STRING "Target drawing api")
-set(DrawTypes "No Visuals;Glez;Engine;IMGUI;IMGUI Streamproof" CACHE INTERNAL "Select the drawing api that cathook should use")
+set(DrawTypes "Textmode;No Visuals;Glez;Engine;IMGUI;IMGUI Streamproof" CACHE INTERNAL "Select the drawing api that cathook should use")
 set_property(CACHE Visuals_DrawType PROPERTY STRINGS ${DrawTypes})
 set(Visuals_EnforceStreamSafety 1 CACHE BOOL "If a streamsafe drawing method is used, this will remove features that are not streamsafe.")
 
-set(EnableVisuals 0)
+set(EnableVisuals 1)
 set(EnableGlezDrawing 0)
 set(EnableEngineDrawing 0)
 set(EnableImGuiDrawing 0)
 set(ExternalDrawing 0)
+set(Textmode 0)
 
-if(NOT Visuals_DrawType STREQUAL "No Visuals")
-    set(EnableVisuals 1)
-endif()
-if(Visuals_DrawType STREQUAL "Glez")
+if(Visuals_DrawType STREQUAL "Textmode")
+    set(EnableVisuals 0)
+    set(Textmode 1)
+elseif(Visuals_DrawType STREQUAL "No Visuals")
+    set(EnableVisuals 0)
+elseif(Visuals_DrawType STREQUAL "Glez")
     set(EnableGlezDrawing 1)
 elseif(Visuals_DrawType STREQUAL "Engine")
     set(EnableEngineDrawing 1)
@@ -73,7 +76,6 @@ set(EnableGUI 1 CACHE BOOL "Enable GUI")
 set(EnableIPC 1 CACHE BOOL "Enable IPC")
 set(DataPath "/opt/cathook/data" CACHE FILEPATH "Data location")
 set(VACBypass 0 CACHE BOOL "Textmode VAC bypass")
-set(Textmode 0 CACHE BOOL "Various textmode-only features for bots")
 set(EnableTextmodeStdin 0 CACHE BOOL "Textmode Stdin -> Console bridge (EXPERIMENTAL)")
 set(EnableWarnings 0 CACHE BOOL "Enable compile warnings")
 set(EnableOnlineFeatures 0 CACHE BOOL "Enable online features (WIP)")
