--- a/src/hacks/CMakeLists.txt
+++ b/src/hacks/CMakeLists.txt
@@ -20,6 +20,7 @@ set(files "${CMAKE_CURRENT_LIST_DIR}/AutoJoin.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/AutoTaunt.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Bunnyhop.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Backtrack.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/BPExpander.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/ChatCommands.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/CritSay.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/FollowBot.cpp"
