--- a/src/visual/CMakeLists.txt
+++ b/src/visual/CMakeLists.txt
@@ -11,8 +11,13 @@ set(files "${CMAKE_CURRENT_LIST_DIR}/atlas.cpp"
 target_sources(cathook PRIVATE ${files})
 list(REMOVE_ITEM ignore_files ${files})
 set(ignore_files ${ignore_files} CACHE INTERNAL "")
+
 if(EnableGUI)
     add_subdirectory(menu)
+    set(files "${CMAKE_CURRENT_LIST_DIR}/GUISnow.cpp")
+    target_sources(cathook PRIVATE ${files})
+    list(REMOVE_ITEM ignore_files ${files})
+    set(ignore_files ${ignore_files} CACHE INTERNAL "")
 endif()
 
 if (EnableImGuiDrawing)
