--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,5 @@
 [submodule "external/clip"]
 	path = external/clip
 	url = https://github.com/nullworks/clip
+[submodule "external/simple-ipc"]
+	branch = temp
