--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,10 +109,11 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/external")
 find_package(SDL2 REQUIRED)
 find_package(Boost 1.70.0)
 if (NOT ${Boost_FOUND})
-    set(BOOST_URL https://dl.bintray.com/boostorg/release/1.72.0/source/boost_1_72_0.tar.bz2)
-    set(BOOST_URL_SHA256 59c9b274bc451cf91a9ba1dd2c7fdcaf5d60b1b3aa83f2c9fa143417cc660722)
+    set(BOOST_LIBS_OPTIONAL "" CACHE STRING "Boost libs to be compiled")
     add_subdirectory(external/boost-cmake)
-    target_link_libraries(cathook Boost::boost)
+    SET (BOOST_ROOT ${CMAKE_BINARY_DIR}/_deps/boost-src)
+    find_package(Boost 1.70 REQUIRED)
+    include_directories(${Boost_INCLUDE_DIRS})
 endif()
 
 execute_process(COMMAND
