--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 if [ $(id -u) -eq 0 ]; then
-    echo -e "\033[1;33m \n \nThis script must'nt be run as root!\n\033[0m"
+    echo -e "\033[1;33m \n \nThis script mustn't be run as root!\n\033[0m"
     exit 1
 fi
 
