add explicit binary mode data path support
The next cathook-gui update will automatically set some systems (mainly ubuntu 18.04 and not officially supported distros) to binary mode. The old method would have preferred the out of date /opt/cathook/data directory.

enable binary mode

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ stages:
 pages:
   script:
     # Build cathook
-    - mkdir build_cathook && pushd build_cathook && cmake .. && make && popd
+    - mkdir build_cathook && pushd build_cathook && cmake -DInternal_Binarymode=true .. && make && popd
     # Create the "package" containing everything needed
     - mkdir package && mv ./bin/libcathook.so ./package/libcathook.so && mv ./data ./package/data && mv ./config_data ./package/config_data && mv ./scripts/binarypackage/install ./package/install && mv ./scripts/binarypackage/attach ./package/attach
     # Build a static gdb
