--- a/src/hooks/CMakeLists.txt
+++ b/src/hooks/CMakeLists.txt
@@ -10,6 +10,7 @@ set(files "${CMAKE_CURRENT_LIST_DIR}/CanPacket.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/nographics.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/others.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/Paint.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/PlayerAnimFix.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/PreDataUpdate.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/RandomInt.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/RunCommand.cpp"
