--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,30 @@
 [submodule "source-sdk-2013-headers"]
 	path = external/source-sdk-2013-headers
-	url = https://github.com/nullworks/source-sdk-2013-headers
+	url = https://gitlab.com/nullworks/cathook/source-sdk-2013-headers
 [submodule "libglez"]
 	path = external/libglez
-	url = https://github.com/nullworks/libglez
+	url = https://gitlab.com/nullworks/cathook/libglez
 [submodule "libxoverlay"]
 	path = external/libxoverlay
-	url = https://github.com/nullworks/libxoverlay
+	url = https://gitlab.com/nullworks/cathook/libxoverlay
 [submodule "simple-ipc"]
 	path = external/simple-ipc
-	url = https://github.com/nullworks/simple-ipc
+	url = https://gitlab.com/nullworks/cathook/simple-ipc
 [submodule "external/MicroPather"]
 	path = external/MicroPather
-	url = https://github.com/nullworks/MicroPather
+	url = https://gitlab.com/nullworks/cathook/MicroPather
 [submodule "external/TF2_NavFile_Reader"]
 	path = external/TF2_NavFile_Reader
-	url = https://github.com/nullworks/TF2_NavFile_Reader
+	url = https://gitlab.com/nullworks/cathook/TF2_NavFile_Reader
 [submodule "external/cotire"]
 	path = external/cotire
 	url = https://github.com/sakra/cotire
 [submodule "external/clip"]
 	path = external/clip
-	url = https://github.com/nullworks/clip
+	url = https://gitlab.com/nullworks/cathook/clip
 [submodule "external/libnullnexus"]
 	path = external/libnullnexus
-	url = https://github.com/nullworks/libnullnexus
+	url = https://gitlab.com/nullworks/cathook/libnullnexus
 [submodule "external/boost-cmake"]
 	path = external/boost-cmake
 	url = https://github.com/Orphis/boost-cmake.git
