Rewrite navbot/navparser
Fix and improve capture and pathing logic

Fixes some bugs with the capture logic and makes bots able to prioritize areas properly and fixes crouch jumps
Apply 1 suggestion(s) to 1 file(s)
Combine all Capture related files into one file

attempt at remaking navbot

big improvements, we're slowly getting somewhere!

Switch from bounding box traces to double traces

lightcat changes

Many improvements. Vischeck cache, etc

Fix bug related to the Dropdown code

WIP

i dont even know what this is, just comitting so the current state is out there
Improve navigation and fix a ton of bugs

- Fix findClosestNavArea
- Apply Dropdowns properly
- Improve pathing logic to not hit walls (unless nav mesh is stupid)
- Don't try to jump with revved Minigun
Add runtime vischecking and repathing

Also make the priority system work
Update debug message to reclect center point and properly restore z

Fix a bunch of issues in the nav logic

Account for brass beast speed

Skip a crumb when possible

Fix jump height + add logic to prevent getting stuck

Add very basic navbot behaviour and improve stuck detection system

- Look at path
- Get Health
- Get Ammo
- Roam
Improve Navbot to a semi-usable level

- Universal Blacklist system
- Re-added stay near
- Avoid walking into enemy range
- Snipe Sentries
Fix some garbage prioritizing in aimbot

More Navbot changes

- Readd Autojump
- Readd best weapon logic
- Make Staynear take way less resources
- Make bot ignore free blacklist if Ubered/Invincible
Make sentry priority better

Add capping and fix water movement

Make bots escape danger and add a way to draw danger

Fix a few things (See Desc)

- Make roaming no longer path around the entire map, but instead choose nearby spots.
- Make enemy danger not include People marked as CAT/Friend (Don't bump into them either though)
- Fix inaccurate visuals on blacklist
Make snipers bots more aggressive

Fix antiaim being enabled with no pitch and yaw

this casued issues with

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(files "${CMAKE_CURRENT_LIST_DIR}/angles.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/CaptureLogic.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/chatlog.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/chatstack.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/conditions.cpp"
