Add a bypass to some community AntiCheats and small anti-afk change

--- a/src/hacks/CMakeLists.txt
+++ b/src/hacks/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(files "${CMAKE_CURRENT_LIST_DIR}/AutoJoin.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/AntiCheatBypass.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/CatBot.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Spam.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/AutoItem.cpp"
