--- a/src/hacks/CMakeLists.txt
+++ b/src/hacks/CMakeLists.txt
@@ -37,6 +37,7 @@ set(files "${CMAKE_CURRENT_LIST_DIR}/AutoJoin.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Noisemaker.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/PureBypass.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Trigger.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/SpellForcer.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/UberSpam.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Walkbot.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Warp.cpp")
