Fix crashes for boost for now (kinda jank solution)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,12 +102,13 @@ endif()
 find_package(Git REQUIRED)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/external")
 find_package(SDL2 REQUIRED)
-find_package(Boost 1.70.0)
+SET (Boost_NO_SYSTEM_PATHS true)
+find_package(Boost 1.71.0 EXACT)
 if (NOT ${Boost_FOUND})
     set(BOOST_LIBS_OPTIONAL "" CACHE STRING "Boost libs to be compiled")
     add_subdirectory(external/boost-cmake)
     SET (BOOST_ROOT ${CMAKE_BINARY_DIR}/_deps/boost-src)
-    find_package(Boost 1.70 REQUIRED)
+    find_package(Boost 1.71.0 EXACT REQUIRED)
     include_directories(${Boost_INCLUDE_DIRS})
 endif()
 
