Squashed commit of the following:
commit 468dfdd05b57c61890efcb792fe2bcc9ecdbae14
Author: Stephen <stephenmartinemail2003@gmail.com>
Date:   Fri Jan 13 22:32:51 2023 -0500

    Fix

commit 490f593817175ec8f29659ab9227cdbe4855d81c
Author: Stephen <stephenmartinemail2003@gmail.com>
Date:   Fri Jan 13 21:55:21 2023 -0500

    Fixes

commit 2e3c96346adf998f8e9f69403b99b7d181fdcf7a
Author: Stephen <stephenmartinemail2003@gmail.com>
Date:   Fri Jan 13 21:39:27 2023 -0500

    boost fix

commit c514047bfb39ebe8990706401d9295154da250a3
Author: Stephen <stephenmartinemail2003@gmail.com>
Date:   Fri Jan 13 21:18:29 2023 -0500

    updated

commit 71deaeb08388bdaa81f572c076be16dc6cf89067
Author: Stephen <stephenmartinemail2003@gmail.com>
Date:   Fri Jan 13 20:53:09 2023 -0500

    More tests

commit 5790c8481f5ce487ee4cafe455e89f232b4d9bef
Author: Stephen <stephenmartinemail2003@gmail.com>
Date:   Sun Jan 8 18:39:09 2023 -0500

    Inline test

commit 7afd8777cbb0297091f76eeed6b80e67d9754d37
Author: Stephen <stephenmartinemail2003@gmail.com>
Date:   Sat Jan 7 17:19:14 2023 -0500

    Player Anim Fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ if (NOT ExternalDrawing)
     set(Visuals_EnforceStreamSafety 0)
 endif()
 
-set(EnableProfiler 0 CACHE BOOL "Enable Profiler")
+set(EnableProfiler 1 CACHE BOOL "Enable Profiler")
 set(EnableGUI 1 CACHE BOOL "Enable GUI")
 set(EnableIPC 1 CACHE BOOL "Enable IPC")
 set(DataPath "/opt/cathook/data" CACHE FILEPATH "Data location")
@@ -100,13 +100,12 @@ endif()
 find_package(Git REQUIRED)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/external")
 find_package(SDL2 REQUIRED)
-
-find_package(Boost 1.76.0 EXACT)
+find_package(Boost 1.76.5 EXACT)
 if (NOT ${Boost_FOUND})
     set(BOOST_LIBS_OPTIONAL "" CACHE STRING "Boost libs to be compiled")
     add_subdirectory(external/boost-cmake)
     SET (BOOST_ROOT ${CMAKE_BINARY_DIR}/_deps/boost-src)
-    find_package(Boost 1.76.0 EXACT)
+    find_package(Boost 1.76.5 EXACT)
     include_directories(${Boost_INCLUDE_DIRS})
 endif()
 
@@ -167,7 +166,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "-march=native -rdynamic -ggdb -Og")
 if (Internal_Symbolized)
     set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -ggdb -fvisibility=hidden -fvisibility-inlines-hidden")
 else()
-    set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -s -fvisibility=hidden -fvisibility-inlines-hidden")
+    set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -s -fmerge-all-constants -fdevirtualize-at-ltrans -fvisibility=hidden -fvisibility-inlines-hidden")
 endif()
 if (Force_CXX_23B)
     set(CMAKE_CXX_FLAGS "-std=gnu++2b ${CMAKE_CXX_FLAGS}")
