--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ if (NOT ExternalDrawing)
     set(Visuals_EnforceStreamSafety 0)
 endif()
 
-set(EnableProfiler 1 CACHE BOOL "Enable Profiler")
+set(EnableProfiler 0 CACHE BOOL "Enable Profiler")
 set(EnableGUI 1 CACHE BOOL "Enable GUI")
 set(EnableIPC 1 CACHE BOOL "Enable IPC")
 set(DataPath "/opt/cathook/data" CACHE FILEPATH "Data location")
@@ -166,7 +166,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "-march=native -rdynamic -ggdb -Og")
 if (Internal_Symbolized)
     set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -ggdb -fvisibility=hidden -fvisibility-inlines-hidden")
 else()
-    set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -s -fmerge-all-constants -fdevirtualize-at-ltrans -fvisibility=hidden -fvisibility-inlines-hidden")
+    set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -s -fipa-pta -fmerge-all-constants -fdevirtualize-at-ltrans -fvisibility=hidden -fvisibility-inlines-hidden")
 endif()
 if (Force_CXX_23B)
     set(CMAKE_CXX_FLAGS "-std=gnu++2b ${CMAKE_CXX_FLAGS}")
